--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "@syncfusion/ej2-dropdowns": "^16.1.46",
+    "@syncfusion/ej2-ng-dropdowns": "^16.1.46",
     "angularfire2": "^5.0.0-rc.10",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
